# rabbitmq-python

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  compose.yml  main.py  pyproject.toml
app/: settings.py
app/csv/: ids_to_list.py
app/delete_file/: delete_file.py
app/publisher/: _publisher_tutorial.py  publisher.py
app/receiver/: receiver.py
